# forja

./: .gitignore  LICENSE  NOTICE  README.md  build.gradle.kts  install.sh  settings.gradle.kts
.github/workflows/: release.yml
cli/: go.mod  go.sum  main.go
cli/cmd/: alias.go  apply.go  device.go  device_test.go  init.go  init_test.go  mcp.go  mcp_test.go  off.go  root.go  rules.go  rules_test.go  sync.go
cli/internal/adb/: adb.go  adb_test.go
cli/internal/attach/: state.go  state_test.go
cli/internal/config/: aliases.go  aliases_test.go  description_test.go  discover.go  discover_test.go  io.go  io_test.go  types.go  types_test.go
cli/internal/engine/: engine.go  engine_test.go
cli/internal/rules/: bundle_test.go  rules.go  rules_test.go  status_cache_test.go
cli/internal/tui/: app_picker.go  app_picker_test.go  device_picker.go  format.go  format_test.go  pkg_picker.go  pkg_picker_test.go  rules.go  rules_app.go  rules_app_test.go  rules_test.go
docs/: install.md  internals.md  usage.md
e2e/: README.md  core_test.go  device_test.go  go.mod  helpers_extra_test.go  helpers_test.go  init_test.go  mcp_test.go  multiapp_test.go  multipkg_test.go  okhttp5_test.go  sync_test.go  wildcard_test.go
e2e/fixtures/: teapot_response.json
e2e/fixtures/app/: README.md  build.gradle.kts  rules.example.json  settings.gradle.kts
e2e/flows/: start_dev_then_staging.yaml  tap_new_client_assert_418.yaml  tap_singleton.yaml  tap_singleton_assert_200.yaml  tap_singleton_assert_418.yaml
e2e/scripts/: run.sh  run_matrix.sh  setup_emulator.sh  teardown_emulator.sh
jvmti-agent/: build.gradle.kts
jvmti-agent/src/main/cpp/: CMakeLists.txt  agent.cpp
jvmti-agent/src/main/cpp/slicer/: README.forja.md
runtime/: build.gradle.kts
scripts/: allowed-licenses.json  check-licenses.sh  license-report.init.gradle.kts
(+14 files in other folders)
